// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`shader fills enter the agent vocabulary > is a characterization snapshot of the shader vocabulary 1`] = `
[
  {
    "default": "Vector",
    "group": "Text",
    "key": "text",
    "kind": "text",
    "label": "Text",
  },
  {
    "aiEditable": true,
    "default": "inter",
    "group": "Font",
    "hint": "A font token: one of the ten pinned variable families by id (inter, roboto-flex, archivo, fraunces, recursive, bricolage, big-shoulders, space-grotesk, unbounded, source-serif — these have live axes), or \`google:Family@Weight\` for any Google family as one static cut, or \`local:Family@Weight\` for a licensed library face. Changing it changes WHICH AXES EXIST.",
    "key": "fontId",
    "kind": "text",
    "label": "Font",
  },
  {
    "default": 120,
    "group": "Layout",
    "hint": "Em size in output pixels (CSS font-size semantics).",
    "key": "size",
    "kind": "slider",
    "label": "Size",
    "max": 600,
    "min": 8,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layout",
    "hint": "Extra letter spacing in 1/1000 em; 0 = the font's own spacing, negative tightens.",
    "key": "tracking",
    "kind": "slider",
    "label": "Tracking",
    "max": 500,
    "min": -200,
    "step": 1,
  },
  {
    "default": "center",
    "group": "Layout",
    "hint": "Horizontal anchoring of the glyph run.",
    "key": "align",
    "kind": "select",
    "label": "Align",
    "options": [
      "left",
      "center",
      "right",
    ],
  },
  {
    "default": 0,
    "group": "Layout",
    "hint": "Leans the WHOLE RUN sideways, in degrees — a shear over the finished outlines, so counters go oval and horizontal strokes thin. If the font has a Slant axis, that is the better tool: it is a true oblique the designer drew. Reach for this on a font with no such axis, or when you want the composition to lean rather than the letters.",
    "key": "skewX",
    "kind": "slider",
    "label": "Skew X",
    "max": 40,
    "min": -40,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layout",
    "hint": "The same shear on the other axis: the run tilts vertically, rising or falling across its own width. No font axis does this one.",
    "key": "skewY",
    "kind": "slider",
    "label": "Skew Y",
    "max": 40,
    "min": -40,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layout",
    "hint": "Bends the baseline into an arc, in degrees of TOTAL SWEEP: 0 is straight, positive arches the word upward like a rainbow, negative bowls it downward, and ±360 closes it into a ring. The letters themselves are not bent — each one is moved onto the curve and turned to follow it, so the letterforms and the spacing are untouched.",
    "key": "arc",
    "kind": "slider",
    "label": "Arc",
    "max": 360,
    "min": -360,
    "step": 1,
  },
  {
    "default": 1,
    "group": "Layout",
    "hint": "Widens or condenses the LETTERS the way a type designer would draw a wider or narrower cut: counters and spacing take the change, stems keep their weight, rounds flatten their sides. Uses the font’s own Width axis first when it has one. Not a scale — for cartoon squash use the scale motion instead.",
    "key": "stretch",
    "kind": "slider",
    "label": "Stretch",
    "max": 1.8,
    "min": 0.6,
    "step": 0.01,
  },
  {
    "default": 1,
    "group": "Layout",
    "hint": "Makes the letters taller or squatter typographically: stems lengthen, arches and crossbars keep their thickness, every letter keeps the same x-height and cap height. Animate it per glyph for letters that spring up off the baseline.",
    "key": "stretchY",
    "kind": "slider",
    "label": "Height",
    "max": 2,
    "min": 0.6,
    "step": 0.01,
  },
  {
    "default": "off",
    "group": "Layout",
    "hint": "width: solves Stretch so the run fills the output width (minus a small margin) — the Stretch dial shows the solved value and follows the text. off: Stretch is yours.",
    "key": "fit",
    "kind": "select",
    "label": "Fit",
    "options": [
      "off",
      "width",
    ],
  },
  {
    "default": "solid",
    "group": "Paint",
    "hint": "How this layer is painted: a flat colour, a gradient, or one of the procedural patterns.",
    "key": "layer.paint.type",
    "kind": "select",
    "label": "Fill type",
    "options": [
      "solid",
      "gradient",
      "ombre",
      "grid",
      "noise",
      "checkerboard",
      "stripes",
      "qr",
      "shader",
      "shapes",
      "paper",
    ],
  },
  {
    "default": "glyph",
    "group": "Paint",
    "hint": "Which box this layer is measured against: each glyph, the whole word, or the frame (so the type moves over a fill that stays put).",
    "key": "layer.anchor",
    "kind": "select",
    "label": "Fill anchor",
    "options": [
      "glyph",
      "word",
      "frame",
    ],
  },
  {
    "default": 1,
    "group": "Paint",
    "hint": "How strong this layer's ink is in the stack. MULTIPLIES the glyph's own motion fade rather than replacing it, so a half-strength layer still fades out with the word.",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Layer opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "normal",
    "group": "Paint",
    "hint": "How this layer composites onto the layers below it (and onto the background, which this studio draws straight onto).",
    "key": "layer.blend",
    "kind": "select",
    "label": "Layer blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 0,
    "group": "Motion",
    "hint": "Seconds between glyphs. 0 = every glyph animates on one clock; raise it and a track becomes a wave travelling across the word.",
    "key": "motion.stagger.delay",
    "kind": "slider",
    "label": "Stagger",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "forward",
    "group": "Motion",
    "hint": "Which glyph goes first: forward, reverse, center (middle outwards), edges (outermost inwards), or random.",
    "key": "motion.stagger.order",
    "kind": "select",
    "label": "Stagger order",
    "options": [
      "forward",
      "reverse",
      "center",
      "edges",
      "random",
    ],
  },
  {
    "default": 0,
    "group": "Motion",
    "hint": "How much of the word takes part in each blink. 0 switches the whole effect off; 1 puts every letter (or word) in the rotation. What you see dark AT ANY INSTANT is this times the share of the beat that is dark — raise Stay lit and fewer are out at a time.",
    "key": "motion.blink.amount",
    "kind": "slider",
    "label": "Blink",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0,
    "group": "Motion",
    "hint": "How far apart the letters land on the chosen axis, as a share of THAT AXIS'S OWN range — so 0.4 means the same amount of variation on a 100–1000 weight axis as on a −200–150 grade one. 0 switches the whole effect off; 1 spreads the word across the entire axis. Near an end of the axis the swing is squeezed into the room that is left rather than piling letters up on the limit.",
    "key": "motion.scatter.spread",
    "kind": "slider",
    "label": "Scatter",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": "solid",
    "group": "Paint",
    "hint": "How this layer is painted: a flat colour, a gradient, or one of the procedural patterns.",
    "key": "appearance.Lfill.paint.type",
    "kind": "select",
    "label": "Fill · Fill type",
    "options": [
      "solid",
      "gradient",
      "ombre",
      "grid",
      "noise",
      "checkerboard",
      "stripes",
      "qr",
      "shader",
      "shapes",
      "paper",
    ],
  },
  {
    "default": "glyph",
    "group": "Paint",
    "hint": "Which box this layer is measured against: each glyph, the whole word, or the frame (so the type moves over a fill that stays put).",
    "key": "appearance.Lfill.anchor",
    "kind": "select",
    "label": "Fill · Fill anchor",
    "options": [
      "glyph",
      "word",
      "frame",
    ],
  },
  {
    "default": 1,
    "group": "Paint",
    "hint": "How strong this layer's ink is in the stack. MULTIPLIES the glyph's own motion fade rather than replacing it, so a half-strength layer still fades out with the word.",
    "key": "appearance.Lfill.opacity",
    "kind": "slider",
    "label": "Fill · Layer opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "normal",
    "group": "Paint",
    "hint": "How this layer composites onto the layers below it (and onto the background, which this studio draws straight onto).",
    "key": "appearance.Lfill.blend",
    "kind": "select",
    "label": "Fill · Layer blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": "fbm_warp",
    "group": "Shader",
    "hint": "Which catalog shader effect processes the fill underneath.",
    "key": "layer.paint.shader.effectId",
    "kind": "select",
    "label": "Effect",
    "options": [],
  },
  {
    "default": "object",
    "group": "Shader",
    "hint": "object = the field samples in the shape's own local space (tiles/moves with it); frame = it samples the whole frame's space (the shape is a window onto one continuous field).",
    "key": "layer.paint.shader.anchor",
    "kind": "select",
    "label": "Anchor",
    "options": [
      "object",
      "frame",
    ],
  },
  {
    "default": 1,
    "group": "Shader",
    "hint": "Animation rate multiplier for the effect; 0 = frozen (still).",
    "key": "layer.paint.shader.speed",
    "kind": "slider",
    "label": "Speed",
    "max": 4,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 42,
    "group": "Shader",
    "hint": "Varies the generative field — a different number gives a different pattern.",
    "key": "layer.paint.shader.seed",
    "kind": "slider",
    "label": "Variation",
    "max": 9999,
    "min": 1,
    "step": 1,
  },
  {
    "default": 6,
    "group": "Effect",
    "key": "layer.paint.shader.params.segments",
    "kind": "slider",
    "label": "Segments",
    "max": 24,
    "min": 2,
    "step": 0.01,
  },
  {
    "default": 1,
    "group": "Effect",
    "key": "layer.paint.shader.params.zoom",
    "kind": "slider",
    "label": "Zoom",
    "max": 4,
    "min": 0.1,
    "step": 0.01,
  },
  {
    "default": "0",
    "group": "Effect",
    "key": "layer.paint.shader.params.mode",
    "kind": "select",
    "label": "Mode",
    "options": [
      "0",
      "1",
    ],
  },
]
`;

exports[`vtAgentControls > is a characterization snapshot, with and without a font loaded 1`] = `
[
  {
    "default": "Vector",
    "group": "Text",
    "key": "text",
    "kind": "text",
    "label": "Text",
  },
  {
    "aiEditable": true,
    "default": "inter",
    "group": "Font",
    "hint": "A font token: one of the ten pinned variable families by id (inter, roboto-flex, archivo, fraunces, recursive, bricolage, big-shoulders, space-grotesk, unbounded, source-serif — these have live axes), or \`google:Family@Weight\` for any Google family as one static cut, or \`local:Family@Weight\` for a licensed library face. Changing it changes WHICH AXES EXIST.",
    "key": "fontId",
    "kind": "text",
    "label": "Font",
  },
  {
    "default": 120,
    "group": "Layout",
    "hint": "Em size in output pixels (CSS font-size semantics).",
    "key": "size",
    "kind": "slider",
    "label": "Size",
    "max": 600,
    "min": 8,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layout",
    "hint": "Extra letter spacing in 1/1000 em; 0 = the font's own spacing, negative tightens.",
    "key": "tracking",
    "kind": "slider",
    "label": "Tracking",
    "max": 500,
    "min": -200,
    "step": 1,
  },
  {
    "default": "center",
    "group": "Layout",
    "hint": "Horizontal anchoring of the glyph run.",
    "key": "align",
    "kind": "select",
    "label": "Align",
    "options": [
      "left",
      "center",
      "right",
    ],
  },
  {
    "default": 0,
    "group": "Layout",
    "hint": "Leans the WHOLE RUN sideways, in degrees — a shear over the finished outlines, so counters go oval and horizontal strokes thin. If the font has a Slant axis, that is the better tool: it is a true oblique the designer drew. Reach for this on a font with no such axis, or when you want the composition to lean rather than the letters.",
    "key": "skewX",
    "kind": "slider",
    "label": "Skew X",
    "max": 40,
    "min": -40,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layout",
    "hint": "The same shear on the other axis: the run tilts vertically, rising or falling across its own width. No font axis does this one.",
    "key": "skewY",
    "kind": "slider",
    "label": "Skew Y",
    "max": 40,
    "min": -40,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layout",
    "hint": "Bends the baseline into an arc, in degrees of TOTAL SWEEP: 0 is straight, positive arches the word upward like a rainbow, negative bowls it downward, and ±360 closes it into a ring. The letters themselves are not bent — each one is moved onto the curve and turned to follow it, so the letterforms and the spacing are untouched.",
    "key": "arc",
    "kind": "slider",
    "label": "Arc",
    "max": 360,
    "min": -360,
    "step": 1,
  },
  {
    "default": 1,
    "group": "Layout",
    "hint": "Widens or condenses the LETTERS the way a type designer would draw a wider or narrower cut: counters and spacing take the change, stems keep their weight, rounds flatten their sides. Uses the font’s own Width axis first when it has one. Not a scale — for cartoon squash use the scale motion instead.",
    "key": "stretch",
    "kind": "slider",
    "label": "Stretch",
    "max": 1.8,
    "min": 0.6,
    "step": 0.01,
  },
  {
    "default": 1,
    "group": "Layout",
    "hint": "Makes the letters taller or squatter typographically: stems lengthen, arches and crossbars keep their thickness, every letter keeps the same x-height and cap height. Animate it per glyph for letters that spring up off the baseline.",
    "key": "stretchY",
    "kind": "slider",
    "label": "Height",
    "max": 2,
    "min": 0.6,
    "step": 0.01,
  },
  {
    "default": "off",
    "group": "Layout",
    "hint": "width: solves Stretch so the run fills the output width (minus a small margin) — the Stretch dial shows the solved value and follows the text. off: Stretch is yours.",
    "key": "fit",
    "kind": "select",
    "label": "Fit",
    "options": [
      "off",
      "width",
    ],
  },
  {
    "default": "solid",
    "group": "Paint",
    "hint": "How this layer is painted: a flat colour, a gradient, or one of the procedural patterns.",
    "key": "layer.paint.type",
    "kind": "select",
    "label": "Fill type",
    "options": [
      "solid",
      "gradient",
      "ombre",
      "grid",
      "noise",
      "checkerboard",
      "stripes",
      "qr",
      "shader",
      "shapes",
      "paper",
    ],
  },
  {
    "default": "#ffffff",
    "group": "Paint",
    "key": "layer.paint.a",
    "kind": "color",
    "label": "Fill",
  },
  {
    "default": "glyph",
    "group": "Paint",
    "hint": "Which box this layer is measured against: each glyph, the whole word, or the frame (so the type moves over a fill that stays put).",
    "key": "layer.anchor",
    "kind": "select",
    "label": "Fill anchor",
    "options": [
      "glyph",
      "word",
      "frame",
    ],
  },
  {
    "default": 1,
    "group": "Paint",
    "hint": "How strong this layer's ink is in the stack. MULTIPLIES the glyph's own motion fade rather than replacing it, so a half-strength layer still fades out with the word.",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Layer opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "normal",
    "group": "Paint",
    "hint": "How this layer composites onto the layers below it (and onto the background, which this studio draws straight onto).",
    "key": "layer.blend",
    "kind": "select",
    "label": "Layer blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 0,
    "group": "Motion",
    "hint": "Seconds between glyphs. 0 = every glyph animates on one clock; raise it and a track becomes a wave travelling across the word.",
    "key": "motion.stagger.delay",
    "kind": "slider",
    "label": "Stagger",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "forward",
    "group": "Motion",
    "hint": "Which glyph goes first: forward, reverse, center (middle outwards), edges (outermost inwards), or random.",
    "key": "motion.stagger.order",
    "kind": "select",
    "label": "Stagger order",
    "options": [
      "forward",
      "reverse",
      "center",
      "edges",
      "random",
    ],
  },
  {
    "default": 0,
    "group": "Motion",
    "hint": "How much of the word takes part in each blink. 0 switches the whole effect off; 1 puts every letter (or word) in the rotation. What you see dark AT ANY INSTANT is this times the share of the beat that is dark — raise Stay lit and fewer are out at a time.",
    "key": "motion.blink.amount",
    "kind": "slider",
    "label": "Blink",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0,
    "group": "Motion",
    "hint": "How far apart the letters land on the chosen axis, as a share of THAT AXIS'S OWN range — so 0.4 means the same amount of variation on a 100–1000 weight axis as on a −200–150 grade one. 0 switches the whole effect off; 1 spreads the word across the entire axis. Near an end of the axis the swing is squeezed into the room that is left rather than piling letters up on the limit.",
    "key": "motion.scatter.spread",
    "kind": "slider",
    "label": "Scatter",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": "solid",
    "group": "Paint",
    "hint": "How this layer is painted: a flat colour, a gradient, or one of the procedural patterns.",
    "key": "appearance.Lfill.paint.type",
    "kind": "select",
    "label": "Fill · Fill type",
    "options": [
      "solid",
      "gradient",
      "ombre",
      "grid",
      "noise",
      "checkerboard",
      "stripes",
      "qr",
      "shader",
      "shapes",
      "paper",
    ],
  },
  {
    "default": "#ffffff",
    "group": "Paint",
    "key": "appearance.Lfill.paint.a",
    "kind": "color",
    "label": "Fill · Fill",
  },
  {
    "default": "glyph",
    "group": "Paint",
    "hint": "Which box this layer is measured against: each glyph, the whole word, or the frame (so the type moves over a fill that stays put).",
    "key": "appearance.Lfill.anchor",
    "kind": "select",
    "label": "Fill · Fill anchor",
    "options": [
      "glyph",
      "word",
      "frame",
    ],
  },
  {
    "default": 1,
    "group": "Paint",
    "hint": "How strong this layer's ink is in the stack. MULTIPLIES the glyph's own motion fade rather than replacing it, so a half-strength layer still fades out with the word.",
    "key": "appearance.Lfill.opacity",
    "kind": "slider",
    "label": "Fill · Layer opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "normal",
    "group": "Paint",
    "hint": "How this layer composites onto the layers below it (and onto the background, which this studio draws straight onto).",
    "key": "appearance.Lfill.blend",
    "kind": "select",
    "label": "Fill · Layer blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
]
`;

exports[`vtAgentControls > is a characterization snapshot, with and without a font loaded 2`] = `
[
  {
    "default": "Vector",
    "group": "Text",
    "key": "text",
    "kind": "text",
    "label": "Text",
  },
  {
    "aiEditable": true,
    "default": "inter",
    "group": "Font",
    "hint": "A font token: one of the ten pinned variable families by id (inter, roboto-flex, archivo, fraunces, recursive, bricolage, big-shoulders, space-grotesk, unbounded, source-serif — these have live axes), or \`google:Family@Weight\` for any Google family as one static cut, or \`local:Family@Weight\` for a licensed library face. Changing it changes WHICH AXES EXIST.",
    "key": "fontId",
    "kind": "text",
    "label": "Font",
  },
  {
    "default": 120,
    "group": "Layout",
    "hint": "Em size in output pixels (CSS font-size semantics).",
    "key": "size",
    "kind": "slider",
    "label": "Size",
    "max": 600,
    "min": 8,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layout",
    "hint": "Extra letter spacing in 1/1000 em; 0 = the font's own spacing, negative tightens.",
    "key": "tracking",
    "kind": "slider",
    "label": "Tracking",
    "max": 500,
    "min": -200,
    "step": 1,
  },
  {
    "default": "center",
    "group": "Layout",
    "hint": "Horizontal anchoring of the glyph run.",
    "key": "align",
    "kind": "select",
    "label": "Align",
    "options": [
      "left",
      "center",
      "right",
    ],
  },
  {
    "default": 0,
    "group": "Layout",
    "hint": "Leans the WHOLE RUN sideways, in degrees — a shear over the finished outlines, so counters go oval and horizontal strokes thin. If the font has a Slant axis, that is the better tool: it is a true oblique the designer drew. Reach for this on a font with no such axis, or when you want the composition to lean rather than the letters.",
    "key": "skewX",
    "kind": "slider",
    "label": "Skew X",
    "max": 40,
    "min": -40,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layout",
    "hint": "The same shear on the other axis: the run tilts vertically, rising or falling across its own width. No font axis does this one.",
    "key": "skewY",
    "kind": "slider",
    "label": "Skew Y",
    "max": 40,
    "min": -40,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layout",
    "hint": "Bends the baseline into an arc, in degrees of TOTAL SWEEP: 0 is straight, positive arches the word upward like a rainbow, negative bowls it downward, and ±360 closes it into a ring. The letters themselves are not bent — each one is moved onto the curve and turned to follow it, so the letterforms and the spacing are untouched.",
    "key": "arc",
    "kind": "slider",
    "label": "Arc",
    "max": 360,
    "min": -360,
    "step": 1,
  },
  {
    "default": 1,
    "group": "Layout",
    "hint": "Widens or condenses the LETTERS the way a type designer would draw a wider or narrower cut: counters and spacing take the change, stems keep their weight, rounds flatten their sides. Uses the font’s own Width axis first when it has one. Not a scale — for cartoon squash use the scale motion instead.",
    "key": "stretch",
    "kind": "slider",
    "label": "Stretch",
    "max": 1.8,
    "min": 0.6,
    "step": 0.01,
  },
  {
    "default": 1,
    "group": "Layout",
    "hint": "Makes the letters taller or squatter typographically: stems lengthen, arches and crossbars keep their thickness, every letter keeps the same x-height and cap height. Animate it per glyph for letters that spring up off the baseline.",
    "key": "stretchY",
    "kind": "slider",
    "label": "Height",
    "max": 2,
    "min": 0.6,
    "step": 0.01,
  },
  {
    "default": "off",
    "group": "Layout",
    "hint": "width: solves Stretch so the run fills the output width (minus a small margin) — the Stretch dial shows the solved value and follows the text. off: Stretch is yours.",
    "key": "fit",
    "kind": "select",
    "label": "Fit",
    "options": [
      "off",
      "width",
    ],
  },
  {
    "default": "solid",
    "group": "Paint",
    "hint": "How this layer is painted: a flat colour, a gradient, or one of the procedural patterns.",
    "key": "layer.paint.type",
    "kind": "select",
    "label": "Fill type",
    "options": [
      "solid",
      "gradient",
      "ombre",
      "grid",
      "noise",
      "checkerboard",
      "stripes",
      "qr",
      "shader",
      "shapes",
      "paper",
    ],
  },
  {
    "default": "#ffffff",
    "group": "Paint",
    "key": "layer.paint.a",
    "kind": "color",
    "label": "Fill",
  },
  {
    "default": "glyph",
    "group": "Paint",
    "hint": "Which box this layer is measured against: each glyph, the whole word, or the frame (so the type moves over a fill that stays put).",
    "key": "layer.anchor",
    "kind": "select",
    "label": "Fill anchor",
    "options": [
      "glyph",
      "word",
      "frame",
    ],
  },
  {
    "default": 3,
    "group": "Paint",
    "hint": "Outline width in OUTPUT pixels, so it does not shrink with size. On a solid extrude it outlines the whole fused body — one silhouette, not one outline per copy.",
    "key": "layer.width",
    "kind": "slider",
    "label": "Stroke width",
    "max": 40,
    "min": 0,
    "step": 0.5,
  },
  {
    "default": 1,
    "group": "Paint",
    "hint": "How strong this layer's ink is in the stack. MULTIPLIES the glyph's own motion fade rather than replacing it, so a half-strength layer still fades out with the word.",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Layer opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "normal",
    "group": "Paint",
    "hint": "How this layer composites onto the layers below it (and onto the background, which this studio draws straight onto).",
    "key": "layer.blend",
    "kind": "select",
    "label": "Layer blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 1,
    "group": "Paint",
    "hint": "How much of this outline is drawn, as a fraction of its longest contour — the letters drawing themselves. 1 is the whole stroke and is the default. It exports as a REAL \`stroke-dasharray\` / \`stroke-dashoffset\`, so a designer opening the SVG gets a dashed stroke they can restyle, not a clipped one. Animate it 0 → 1 (with a stagger, so the letters draw one after another).",
    "key": "layer.draw",
    "kind": "slider",
    "label": "Draw on",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Motion",
    "hint": "Seconds between glyphs. 0 = every glyph animates on one clock; raise it and a track becomes a wave travelling across the word.",
    "key": "motion.stagger.delay",
    "kind": "slider",
    "label": "Stagger",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "forward",
    "group": "Motion",
    "hint": "Which glyph goes first: forward, reverse, center (middle outwards), edges (outermost inwards), or random.",
    "key": "motion.stagger.order",
    "kind": "select",
    "label": "Stagger order",
    "options": [
      "forward",
      "reverse",
      "center",
      "edges",
      "random",
    ],
  },
  {
    "default": 0,
    "group": "Motion",
    "hint": "How much of the word takes part in each blink. 0 switches the whole effect off; 1 puts every letter (or word) in the rotation. What you see dark AT ANY INSTANT is this times the share of the beat that is dark — raise Stay lit and fewer are out at a time.",
    "key": "motion.blink.amount",
    "kind": "slider",
    "label": "Blink",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0,
    "group": "Motion",
    "hint": "How far apart the letters land on the chosen axis, as a share of THAT AXIS'S OWN range — so 0.4 means the same amount of variation on a 100–1000 weight axis as on a −200–150 grade one. 0 switches the whole effect off; 1 spreads the word across the entire axis. Near an end of the axis the swing is squeezed into the room that is left rather than piling letters up on the limit.",
    "key": "motion.scatter.spread",
    "kind": "slider",
    "label": "Scatter",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 400,
    "group": "Axes",
    "hint": "Weight — thin to black, as real outline geometry.",
    "key": "axes.wght",
    "kind": "slider",
    "label": "Weight",
    "max": 1000,
    "min": 100,
    "step": 1,
  },
  {
    "default": 100,
    "group": "Axes",
    "hint": "Width — condensed to extended.",
    "key": "axes.wdth",
    "kind": "slider",
    "label": "Width",
    "max": 151,
    "min": 25,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Axes",
    "hint": "Grade — weight WITHOUT changing the width the text occupies.",
    "key": "axes.GRAD",
    "kind": "slider",
    "label": "Grade",
    "max": 150,
    "min": -200,
    "step": 1,
  },
  {
    "default": 96,
    "group": "Axes",
    "hint": "Thick stroke — thickness of the vertical strokes.",
    "key": "axes.XOPQ",
    "kind": "slider",
    "label": "Thick stroke",
    "max": 175,
    "min": 27,
    "step": 1,
  },
  {
    "default": "solid",
    "group": "Paint",
    "hint": "How this layer is painted: a flat colour, a gradient, or one of the procedural patterns.",
    "key": "appearance.Lstroke.paint.type",
    "kind": "select",
    "label": "Stroke · Fill type",
    "options": [
      "solid",
      "gradient",
      "ombre",
      "grid",
      "noise",
      "checkerboard",
      "stripes",
      "qr",
      "shader",
      "shapes",
      "paper",
    ],
  },
  {
    "default": "#ffffff",
    "group": "Paint",
    "key": "appearance.Lstroke.paint.a",
    "kind": "color",
    "label": "Stroke · Fill",
  },
  {
    "default": "glyph",
    "group": "Paint",
    "hint": "Which box this layer is measured against: each glyph, the whole word, or the frame (so the type moves over a fill that stays put).",
    "key": "appearance.Lstroke.anchor",
    "kind": "select",
    "label": "Stroke · Fill anchor",
    "options": [
      "glyph",
      "word",
      "frame",
    ],
  },
  {
    "default": 3,
    "group": "Paint",
    "hint": "Outline width in OUTPUT pixels, so it does not shrink with size. On a solid extrude it outlines the whole fused body — one silhouette, not one outline per copy.",
    "key": "appearance.Lstroke.width",
    "kind": "slider",
    "label": "Stroke · Stroke width",
    "max": 40,
    "min": 0,
    "step": 0.5,
  },
  {
    "default": 1,
    "group": "Paint",
    "hint": "How strong this layer's ink is in the stack. MULTIPLIES the glyph's own motion fade rather than replacing it, so a half-strength layer still fades out with the word.",
    "key": "appearance.Lstroke.opacity",
    "kind": "slider",
    "label": "Stroke · Layer opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "normal",
    "group": "Paint",
    "hint": "How this layer composites onto the layers below it (and onto the background, which this studio draws straight onto).",
    "key": "appearance.Lstroke.blend",
    "kind": "select",
    "label": "Stroke · Layer blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 1,
    "group": "Paint",
    "hint": "How much of this outline is drawn, as a fraction of its longest contour — the letters drawing themselves. 1 is the whole stroke and is the default. It exports as a REAL \`stroke-dasharray\` / \`stroke-dashoffset\`, so a designer opening the SVG gets a dashed stroke they can restyle, not a clipped one. Animate it 0 → 1 (with a stagger, so the letters draw one after another).",
    "key": "appearance.Lstroke.draw",
    "kind": "slider",
    "label": "Stroke · Draw on",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
]
`;
